implemented compiler for nunjucks templates
    ./manage.py nunjucks_tools --compile

--- a/website/apps/istats/templates/istats/templatetags/istats_scripts.html
+++ b/website/apps/istats/templates/istats/templatetags/istats_scripts.html
@@ -1,7 +1,8 @@
 <script type="text/javascript" src="{{ STATIC_URL }}istats/js/istats.js"></script>
-
 <script>
-	istats = new IstatsApp;
-    istats.api_url = "{% url api_dispatch_list resource_name='stats' api_name='v1'%}server/";
-	istats.init();
+    $(function () {
+        istats = new IstatsApp;
+        istats.api_url = "{% url api_dispatch_list resource_name='stats' api_name='v1'%}server/";
+        istats.init();
+    });
 </script>
