--- a/website/apps/importer/templates/importer/import_form_pushy.html
+++ b/website/apps/importer/templates/importer/import_form_pushy.html
@@ -114,6 +114,7 @@ $(document).ready(function() {
 	        maxFileSize: 1000000000, // 1000 MB
 	        minFileSize: 200000,
 	        acceptFileTypes: /(\.|\/)(mp3|aif?f|wav|avi|flac|mp4|ogg|jpe?g)$/i,
+            sequentialUploads: true,
 	        limitConcurrentUploads: 1
 	   };
 	   
