--- a/website/site-static/sass/apps/_collector.sass
+++ b/website/site-static/sass/apps/_collector.sass
@@ -59,6 +59,10 @@ $popup-width: 280px
             margin: 0
             li
               line-height: 15px
+
+              a
+                color: white
+
               span
                 font-size: 11px
                 &.number
@@ -75,7 +79,7 @@ $popup-width: 280px
 
         &.hover
           background-color: #ddffd9
-          li *
+          li *, li > strong > a
             color: #333
 
         &.loading
